--- a/app/src/main/res/layout/creators_card.xml
+++ b/app/src/main/res/layout/creators_card.xml
@@ -1,85 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:layout_gravity="center_horizontal"
     android:orientation="vertical"
-     app:cardCornerRadius="10dp">
+    app:cardElevation="4dp"
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:padding="15dp"
-            android:id="@+id/profilepic"
-        android:src="@drawable/ic_person_black_24dp"
-        app:civ_border_color="@color/white"
-        app:civ_border_width="1dp" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:padding="2dp">
+     android:layout_marginTop="25dp"
+    android:layout_margin="10dp"
+     app:cardCornerRadius="20dp">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                app:cardCornerRadius="5dp">
-
-            <TextView
-                android:padding="10dp"
-                android:textStyle="bold"
-                android:id="@+id/nome"
-                style="@style/AppTheme"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:text="@string/username"
-                android:textAlignment="center"
-                 android:textSize="18sp" />
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="3dp">
-
-                <TextView
-                    android:id="@+id/cargo"
-                    style="@style/AppTheme"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:padding="10dp"
-                    android:text="@string/creator"
-                    android:textAlignment="center"
-                     android:textSize="18sp" />
-            </android.support.v7.widget.CardView>
+    <ImageView
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+         android:id="@+id/profilepic"
+        android:src="@drawable/ic_person_black_24dp"/>
+    <TextView
+        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+        android:textColor="?attr/actionbarcolor"
+        android:background="?attr/overlaycolor"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:id="@+id/nome"
+         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+         android:text="@string/username"
+        android:textAlignment="center" />
 
 
-            <ImageButton
-                android:contentDescription="@string/linkedinbutton"
-                android:id="@+id/linkedin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:autoLink="web"
-                android:background="@color/transparent"
-                android:drawablePadding="4dp"
-                android:padding="4dp"
-                android:src="@drawable/ic_linkedin_sign"
-                android:tint="@color/blue_600" />
-
-
-        </LinearLayout>
-
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
