--- a/app/src/main/res/layout/references.xml
+++ b/app/src/main/res/layout/references.xml
@@ -1,35 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@color/transparent"
-    android:layout_margin="2dp"
-    android:orientation="vertical"
-    android:padding="2dp">
-
-    <de.hdodenhof.circleimageview.CircleImageView
+    android:background="?attr/backgroundcolor"
+    app:cardElevation="4dp"
+    android:layout_margin="50dp"
+    app:cardCornerRadius="20dp"
+    android:orientation="vertical">
+    <LinearLayout
+        android:padding="15dp"
+         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:id="@+id/brand"
-        android:layout_height="match_parent"
-        android:src="@drawable/penguin"
-        android:layout_gravity="center" />
+        android:layout_height="wrap_content">
 
-    <com.github.mmin18.widget.RealtimeBlurView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:realtimeBlurRadius="10dp"
-        app:realtimeOverlayColor="@color/lwhite" />
-    <TextView
-        android:layout_centerInParent="true"
-        android:id="@+id/brandtext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="2dp"
-        android:text="brand"
-        android:textColor="?attr/textcolor"
-        android:textSize="18sp" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="100dp"
+            android:id="@+id/brand"
+            android:layout_height="100dp"
+            android:src="@drawable/penguin"/>
 
-</RelativeLayout>
+        <TextView
+            android:textStyle="bold"
+            android:layout_margin="15dp"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+             android:id="@+id/brandtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:text="brand"
+            android:textColor="?attr/textcolor"  />
+    </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
