--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -3,23 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_margin="5dp"
+    android:layout_height="100dp"
+    android:layout_margin="30dp"
     android:elevation="4dp"
+    android:padding="10dp"
     android:background="?attr/backgroundcolor"
     android:orientation="horizontal"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="15dp">
 
     <LinearLayout
-        android:id="@+id/randomcolors"
-        android:layout_width="10dp"
+         android:id="@+id/randomcolors"
+        android:layout_width="190dp"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/triangl"
         android:orientation="horizontal" />
   <TextView
+      android:textStyle="bold"
+      style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+      android:layout_gravity="center"
       android:id="@+id/reference"
-      android:fontFamily="serif"
-      android:padding="10dp"
+       android:padding="10dp"
       android:textColor="?attr/textcolor"
       android:textSize="24sp"
       android:text="@string/reference"
